update swagger and project table implement
